Updated readme files for running cluster.